Refactor and optimize score calculation and data handling
Replaces the direct manipulation of dataset scaling with a standardization utility to ensure consistent preprocessing. Introduces 'bandwidthAdjustment' to replace 'bandwidth' and streamlines methods related to Gaussian kernels and Hermite polynomials for improved clarity and efficiency. The unused method 'scale' and other redundancies are also removed to maintain clean and maintainable code.